--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <header>
+    <header class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <img src="./img/logomerli-min-retall.png" alt="Logo fans de Merlí" width="135" height="135">
-        <nav>
+    </header>
+    <nav class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <a href="./index.html">Inici</a>
             <a href="./web/general.html">General</a>
             <a href="./web/fotos.html">Fotos</a>
@@ -22,11 +23,10 @@
             <a href="./web/agenda.html">Agenda</a>
             <a href="./web/contacte.html">contacte</a>
         </nav>
-    </header>
 
-    <main>
-        <img src="./img/merliportadafinal.png" alt="Portada serie Merlí" width="383" height="542">
-        <aside>
+    <main class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img src="./img/merliportadafinal.png" alt="Portada serie Merlí" width="383" height="542"></div>
+        <aside class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <h2>ÚLTIMES NOTÍCIES</h2>
             <details>
                 <summary>Articles Generals</summary>
@@ -94,7 +94,7 @@
         </aside>
     </main>
     
-    <footer>
+    <footer class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <span>
             <img src="./img/instalogo2-min.png" alt="Logo instagram" width="15" height="15">
             <a href="https://www.instagram.com/merlitv3oficial/" target="_blank">Insta-Merlí</a>
