--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
 
     <main class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img src="./img/merliportadafinal.png" alt="Portada serie Merlí" width="383" height="542"></div>
+        <div id="divimg" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img src="./img/merliportadafinal.png" alt="Portada serie Merlí" width="383" height="542"></div>
         <aside class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <h2>ÚLTIMES NOTÍCIES</h2>
             <details>
