--- a/web/general.html
+++ b/web/general.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <img src="../img/logomerli-min-retall.png" alt="LogoFansMerlí" width="135" height="135">
         <nav>
             <a href="../index.html">Inici</a>
@@ -24,54 +24,64 @@
         </nav>
     </header>
 
-    <main>
-        <h2>REPARTORI</h2><br>
-        <aside id="img1">
-            <img src="../img/iconfilm-min.png" alt="iconaDirecció" width="220" height="auto">
-        </aside>
-        <ul>
-            <li><b>Director: </b>Eduard Cortés</li>
-            <li><b>Creador: </b>Héctor Lozano</li>
-            <li><b>Gionista: </b>Laia Aguilar i Mercè Sàrrias</li>
-            <li><b>Personatges Principals:</b></li>
-            <li>Francecs Orella, <i>Merlí</i></li>
-            <li>Carlos Cuevas, <i>Pol Rubio</i></li>
-            <li>David Solans, <i>Bruno Bergeron</i></li>
-            <li>Elisabet Casanovas, <i>Tània Illa</i></li>
-            <li>Candela Antón, <i>Berta Prats</i></li>
-            <li>Adrian Grösser, <i>Marc Vilaseca</i></li>
-            <li>Albert Baró, <i>Joan Capdevila</i></li>
-            <li>Marcos Franz, <i>Gerard Piguillem</i></li>
-            <li>Pau Poch, <i>Iván Blasco</i></li>
-            <li><b>Personatges Secundaris</b></li>
-            <li>Laia Manzanares, <i>Oksana</i></li>
-            <li>Anna Maria Barbany, <i>Carmina Calduch</i></li>
-            <li>Júlia Creus, <i>Mónica de Villamore</i></li>
-            <li>Boris Ruiz, <i>Alfonso Rubio</i></li>
-            <li>Pere Ponce, <i>Eugeni Bosc</i></li>
-            <li>Iñaki Mur, <i>Oliver Grau</i></li>
-            <li>Carlota Olci, <i>Silvana</i></li>
-        </ul><br><br>
-        <h2>PRODUCCIÓ</h2><br>
-        <aside id="img3">
-            <img src="../img/camara.png" alt="filmació" width="200" height="auto">
-        </aside>
-        <ul>
-            <li><b>Productor: </b>Aitor Montánchez</li>
-            <li><b>Lloc: </b>Barcelona</li>
-            <li><b>Cinematografía: </b>Joan Benet</li>
-            <li><b>Productora: </b>Nova Verenda</li>
-            <li><b>Distribuidor: </b>TV3, Atresmedia, Netflix, TVE</li>
-            <li><b>Número de temporades: </b>3</li>
-            <li><b>Número de capítols: </b>40</li>
-            <li><b>Duració: </b>50 minuts</li>
-        </ul><br><br>
-        <h2>LLANÇAMENT</h2><br>
-        <ul>
-            <li><b>Primera emissió: </b>14 de setembre del 2015</li>
-            <li><b>Última emissió: </b>15 de gener del 2018</li>
-            <li><b>Edat classificatoria: </b>12 anys</li>
-        </ul><br><br>
+    <main class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <h2>REPARTORI</h2><br>
+            <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
+                <img id="img1" src="../img/iconfilm-min.png" alt="iconaDirecció" width="220" height="auto">
+            </div>
+            <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
+                <ul>
+                    <li><b>Director: </b>Eduard Cortés</li>
+                    <li><b>Creador: </b>Héctor Lozano</li>
+                    <li><b>Gionista: </b>Laia Aguilar i Mercè Sàrrias</li>
+                    <li><b>Personatges Principals:</b></li>
+                    <li>Francecs Orella, <i>Merlí</i></li>
+                    <li>Carlos Cuevas, <i>Pol Rubio</i></li>
+                    <li>David Solans, <i>Bruno Bergeron</i></li>
+                    <li>Elisabet Casanovas, <i>Tània Illa</i></li>
+                    <li>Candela Antón, <i>Berta Prats</i></li>
+                    <li>Adrian Grösser, <i>Marc Vilaseca</i></li>
+                    <li>Albert Baró, <i>Joan Capdevila</i></li>
+                    <li>Marcos Franz, <i>Gerard Piguillem</i></li>
+                    <li>Pau Poch, <i>Iván Blasco</i></li>
+                    <li><b>Personatges Secundaris</b></li>
+                    <li>Laia Manzanares, <i>Oksana</i></li>
+                    <li>Anna Maria Barbany, <i>Carmina Calduch</i></li>
+                    <li>Júlia Creus, <i>Mónica de Villamore</i></li>
+                    <li>Boris Ruiz, <i>Alfonso Rubio</i></li>
+                    <li>Pere Ponce, <i>Eugeni Bosc</i></li>
+                    <li>Iñaki Mur, <i>Oliver Grau</i></li>
+                    <li>Carlota Olci, <i>Silvana</i></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <h2>PRODUCCIÓ</h2>
+            <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
+                <img id="img3" src="../img/camara.png" alt="filmació" width="200" height="auto">
+            </div>
+            <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
+                <ul>
+                    <li><b>Productor: </b>Aitor Montánchez</li>
+                    <li><b>Lloc: </b>Barcelona</li>
+                    <li><b>Cinematografía: </b>Joan Benet</li>
+                    <li><b>Productora: </b>Nova Verenda</li>
+                    <li><b>Distribuidor: </b>TV3, Atresmedia, Netflix, TVE</li>
+                    <li><b>Número de temporades: </b>3</li>
+                    <li><b>Número de capítols: </b>40</li>
+                    <li><b>Duració: </b>50 minuts</li>
+                </ul>
+            </div>
+        </div>
+        <h2>LLANÇAMENT</h2>
+        <div id="llançament">
+            <ul>
+                <li><b>Primera emissió: </b>14 de setembre del 2015</li>
+                <li><b>Última emissió: </b>15 de gener del 2018</li>
+                <li><b>Edat classificatoria: </b>12 anys</li>
+            </ul>
+        </div><br><br>
         <h2>ARGUMENT</h2><br>
         <p>
             El professor de filosofia Merlí Bergerón (Francesc Orella) tria un grup d'alumnes de batxillerat per ser
@@ -81,9 +91,6 @@
             principals i com solucionen els problemes qüotidians a travès de la filosofia d'en Merlí.
         </p><br><br>
         <h2>PREMIS</h2><br>
-        <aside id="img2">
-            <img src="../img/premis.png" alt="premis" width="180" height="auto">
-        </aside>
         <ol>
             <li><b>Premi Iris(2016): </b>guanyador a la millor ficció autonómica</li>
             <li><b>Premi Iris(2016): </b>nominat a millor interpretació masculina</li>
@@ -93,15 +100,28 @@
             <li><b>Premi Zapping: </b>guanyador al millor actor en català a Francesc Orella per Merlí Bergeron
                 Calduch
             </li>
-        </ol><br><br>
-        <h2>TEMA PRINCIPAL</h2><br>
-        <p class="audiot">
-            La música s'anomena: O voo do besouro<br>Traduit al català: El vol del Borinot
-        </p>
-        <div><audio id="audiointro" src="../aud/MERLÍ..mp3" controls loop preload="none">El vol del Borinot (mp3 Intro Merlí)</audio></div>
+        </ol>
+        <div id="img2">
+            <img src="../img/premis.png" alt="premis" width="180" height="auto">
+        </div>
+        <div>
+            <div id="tema">
+                <h2>TEMA PRINCIPAL</h2>
+            </div>
+            <div id="musica">
+                <p>
+                    La música s'anomena: O voo do besouro<br>Traduit al català: El vol del Borinot
+                </p>
+            </div>
+            <div id="audiointro">
+                <audio src="../aud/MERLÍ..mp3" controls loop preload="none">El vol del Borinot (mp3 Intro
+                    Merlí)</audio>
+            </div>
+        </div>
+
     </main>
-    
-    <footer>
+
+    <footer class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <span>
             <img src="../img/instalogo2-min.png" alt="Logo instagram" width="15" height="15">
             <a href="https://www.instagram.com/merlitv3oficial/" target="_blank">Insta-Merlí</a>
